[package]
name = "kapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
console = "0.15.5"
home = "0.5.4"
indicatif = "0.17.3"
magick_rust = "0.17.0"
oauth2 = "4.3.0"
opener = "0.5.2"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tokio = "1.25.0"
url = "2.3.1"
