[package]
name = "kapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
console = "0.15.5"
home = "0.5.4"
indicatif = "0.17.3"
magick_rust = "0.17.0"
opener = "0.5.2"
oauth2 = "4.3.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
url = "2.3.1"
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["macros"] }
bytes = "1.4.0"
keyring = "1.2.1"
bincode = "1.3.3"
base64 = "0.21.0"
