[package]
name = "kapy"
version = "0.2.2"
edition = "2021"
authors = ["Seonghwan Jeong <scryner@gmail.com>"]
build = "build.rs"
description = "Cli tool to copy photos with optimizations"
repository = "https://github.com/scryner/kapy"
keywords = ["cli", "copy", "photo", "avif", "camera"]
license = "MIT"

[[bin]]
name = "kapy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
console = "0.15.5"
home = "0.5.4"
indicatif = "0.17.3"
magick_rust = "0.17.0"
opener = "0.5.2"
oauth2 = "4.3.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
url = "2.3.1"
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["json"] }
bytes = "1.4.0"
base64 = "0.21.0"
gpx = "0.8.6"
chrono = "0.4.23"
walkdir = "2.3.2"
ravif = "0.11.1"
load_image = "3.0.3"
imgref = "1.9.4"
cocoa_image = { version="1.0.5", optional = true }
rayon = "1.7.0"
libheif-rs = "0.19.2"

[build-dependencies]
cc = "1.0.79"
pkg-config = "0.3.26"
vcpkg = "0.2.15"
